<resources>
    <string name="app_name">Tourism</string>
    <string name="map_key">AIzaSyDt3KaMCzGyoj7fdGsI9IBar6mmYD1vkjg</string>
    <string name="username">إسم المستخدم</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="don_t_have_an_account_yet">ليس لدي حساب؟</string>
    <string name="sign_up">إنشاء حساب جديد</string>
    <string name="field_required">الحقل مطلوب</string>
    <string name="inv_email">بريد الكتروني غير صالح</string>
    <string name="pass_too_short">كلمة المرور قصيرة جدا</string>
    <string name="i_have_an_account">لدي حساب بالفعل!</string>
    <string name="first_name">إسم الاول</string>
    <string name="last_name">إسم العائلة</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="logging_in">تسجيل الدخول...</string>
    <string name="user_not_found">المستخدم غير موجود</string>
    <string name="error">خطأ</string>
    <string name="cancel">إلغاء</string>
    <string name="error_msg">خطأ! من فضلك حاول مرة اخرى لاحقا</string>
    <string name="time">الوقت</string>
    <string name="date">التاريخ</string>
    <string name="note">ملاحظة</string>
    <string name="profile">الملف الشخصي</string>
    <string name="settings">الإعدادات</string>
    <string name="update_profile">تعديل الملف الشخصي</string>
    <string name="notification">إشعار</string>
    <string name="logout">خروج</string>
    <string name="wait">إنتظر...</string>
    <string name="suc">تم بنجاح!</string>
    <string name="date_of_birth">تاريخ الميلاد</string>
    <string name="gender">النوع</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="tourist">سائح</string>
    <string name="guide">مرشد سياحي</string>
    <string name="car_number">رقم المركبة</string>
    <string name="select">إختر</string>
    <string name="home">الرئيسية</string>
    <string name="camera">الكاميرا</string>
    <string name="offers">العروض</string>
    <string name="favorite">المرشدين المفضلين</string>
    <string name="receive_orders">إستقبال طلبات جديدة</string>
    <string name="new_orders">الطلبات الجديدة</string>
    <string name="search_for_guides">البحث عن مرشد سياحي...</string>
    <string name="most_rated">الاكثر تقييما</string>
    <string name="no_guide">لا يوجد مرشدين سياحين لعرضهم</string>
    <string name="add_request">طلب مرشد سياحي</string>
    <string name="from_location">موقعي(العنوان)</string>
    <string name="journey_details">إكتب هنا تفاصيل الرحلة....</string>
    <string name="booking_date">تاريخ الحجز</string>
    <string name="booking_time">الموعد</string>
    <string name="book_now">إحجز الان</string>
    <string name="cnt_receive_order">لا يمكنة استقبال الطلبات الان.</string>
    <string name="sorry">عفوا!</string>
    <string name="offer">عرض جديد</string>
    <string name="accept">قبول</string>
    <string name="refuse">رفض</string>
    <string name="no_orders">لا توجد طلبات لعرضها</string>
    <string name="sar">ر.س</string>
    <string name="completed">مكتملة</string>
    <string name="refused">مرفوضة</string>
    <string name="no_offer">لا يوجد عرض</string>
    <string name="status_new">جديد</string>
    <string name="add_rate">إضافة تقييم</string>
    <string name="accepted">تم القبول</string>
    <string name="end">إنهاء الرحلة</string>
    <string name="no_search_result">لا توجد نتائج للبحث</string>
    <string name="search_result">نتائج البحث</string>
    <string name="search">البحث</string>
    <string name="fav">المفضلة</string>
    <string name="unfav">إلغاء المفضلة</string>
    <string name="already_fav">تم الإضافة الى المفضلة من قبل</string>
    <string name="no_fav">لا توجد مفضلة</string>
    <string name="filter_by">تصفية حسب:</string>
    <string name="filter">تطبيق</string>
    <string name="All">الكل</string>
    <string name="language">اللغة</string>
    <string name="ar">العربية</string>
    <string name="en">الإنجليزية</string>
    <string name="available_time">الوقت المتاح</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="male_ar">ذكر (اللغة العربية)</string>
    <string name="male_en">ذكر (اللغة الانجليزية)</string>
    <string name="female_ar">انثي (اللغة العربية)</string>
    <string name="female_en">انثي (اللغة الانجليزية)</string>
    <string name="select_loc_map">حدد موقعك على الخريطة</string>
    <string name="confirm_address">تأكيد</string>

</resources>