<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="counter"
            type="String" />

        <variable
            name="model"
            type="com.app.tourism.models.UserModel" />


    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/update_profile"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"

                    />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:rotation='@{lang.equals("ar")?0:180}'
                    android:src="@drawable/ic_arrow_left"
                    app:tint="@color/gray4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/line_horz" />

            <LinearLayout
                android:id="@+id/llAddMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/new_orders"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"


                    />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rounded_primary"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text='@{counter,default="0"}'
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </FrameLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:rotation='@{lang.equals("ar")?0:180}'
                    android:src="@drawable/ic_arrow_left"
                    app:tint="@color/gray4" />
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/line_horz" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/receive_orders"
                    android:textColor="@color/gray4"
                    android:textSize="15sp"

                    />

                <Switch
                    android:id="@+id/switchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{model.canReceiveOrders,default=true}"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>